--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -9,8 +9,8 @@
 
         <variable name="item" type="sgtmelon.scriptum.domain.model.item.RollItem"/>
 
-        <variable name="keyBin" type="boolean"/>
-        <variable name="checkToggle" type="boolean"/>
+        <variable name="isBin" type="boolean"/>
+        <variable name="isToggleCheck" type="boolean"/>
     </data>
 
     <androidx.cardview.widget.CardView
@@ -32,14 +32,14 @@
                         android:id="@+id/roll_read_check"
                         style="@style/Button.Roll.Read"
                         app:checkState='@{item.check}'
-                        app:checkToggle='@{checkToggle}'
+                        app:checkToggle='@{isToggleCheck}'
                         tools:checked="true"/>
 
                 <ImageButton
                         android:id="@+id/roll_read_click_button"
                         style="@style/Container.Roll.Click"
                         android:contentDescription='@{(item.check ? @string/description_item_roll_uncheck : @string/description_item_roll_check) + " " + item.text}'
-                        android:visibility='@{!keyBin ? View.VISIBLE : View.INVISIBLE}'/>
+                        android:visibility='@{!isBin ? View.VISIBLE : View.INVISIBLE}'/>
 
             </FrameLayout>
 
