--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -15,6 +15,9 @@
         <variable name="isRankEmpty" type="boolean"/>
         <variable name="isEditMode" type="boolean"/>
 
+        <variable name="isListEmpty" type="boolean"/>
+        <variable name="isListHide" type="boolean"/>
+
         <variable name="inputAccess" type="sgtmelon.scriptum.presentation.control.note.input.InputControl.Access"/>
 
         <variable name="isEnterEmpty" type="boolean"/>
@@ -43,8 +46,8 @@
                     android:id="@+id/roll_note_info_include"
                     layout="@layout/include_info"
                     android:visibility="gone"
-                    app:details='@{R.string.info_roll_hide_details}'
-                    app:title='@{R.string.info_roll_hide_title}'/>
+                    app:details='@{isListEmpty ? R.string.info_roll_empty_details : isListHide ? R.string.info_roll_hide_details : R.string.info_null}'
+                    app:title='@{isListEmpty ? R.string.info_roll_empty_title : isListHide ? R.string.info_roll_hide_title : R.string.info_null}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/roll_note_recycler"
