Move visible button to includes
Tag: #Refactor

--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -35,7 +35,7 @@
                 android:orientation="horizontal"
                 android:showDividers="middle"
                 android:divider="@drawable/div_space_small"
-                android:visibility="@{item.haveAlarm() || item.status || item.haveRank() ? View.VISIBLE : View.GONE}"
+                android:visibility='@{item.haveAlarm() || item.status || item.haveRank() ? View.VISIBLE : View.GONE}'
                 tools:visibility="visible">
 
             <ImageView
