Refactor NoteItem with help of sealed class
Tag: #Refactor

--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -8,7 +8,7 @@
         <import type="sgtmelon.scriptum.domain.model.annotation.Theme"/>
 
         <variable name="theme" type="int"/>
-        <variable name="item" type="sgtmelon.scriptum.domain.model.item.NoteItem"/>
+        <variable name="item" type="sgtmelon.scriptum.domain.model.item.NoteItem.Roll"/>
     </data>
 
     <androidx.cardview.widget.CardView
