--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -11,7 +11,7 @@
         <variable name="menuCallback" type="sgtmelon.scriptum.presentation.screen.ui.callback.note.INoteMenu"/>
         <variable name="isDataLoad" type="boolean"/>
 
-        <variable name="item" type="sgtmelon.scriptum.domain.model.item.NoteItem"/>
+        <variable name="item" type="sgtmelon.scriptum.domain.model.item.NoteItem.Roll"/>
         <variable name="isRankEmpty" type="boolean"/>
         <variable name="isEditMode" type="boolean"/>
 
