--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -42,26 +42,26 @@
                     <include
                             android:id="@+id/note_roll_row0_container"
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{item.rollList.size() &gt;= 1 ? View.VISIBLE : View.GONE}'
-                            app:item='@{item.rollList.size() &gt;= 1 ? item.rollList.get(0) : null}'/>
+                            android:visibility="@{item.list.size() &gt;= 1 ? View.VISIBLE : View.GONE}"
+                            app:item="@{item.list.size() &gt;= 1 ? item.list.get(0) : null}"/>
 
                     <include
                             android:id="@+id/note_roll_row1_container"
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{item.rollList.size() &gt;= 2 ? View.VISIBLE : View.GONE}'
-                            app:item='@{item.rollList.size() &gt;= 2 ? item.rollList.get(1) : null}'/>
+                            android:visibility="@{item.list.size() &gt;= 2 ? View.VISIBLE : View.GONE}"
+                            app:item="@{item.list.size() &gt;= 2 ? item.list.get(1) : null}"/>
 
                     <include
                             android:id="@+id/note_roll_row2_container"
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{item.rollList.size() &gt;= 3 ? View.VISIBLE : View.GONE}'
-                            app:item='@{item.rollList.size() &gt;= 3 ? item.rollList.get(2) : null}'/>
+                            android:visibility="@{item.list.size() &gt;= 3 ? View.VISIBLE : View.GONE}"
+                            app:item="@{item.list.size() &gt;= 3 ? item.list.get(2) : null}"/>
 
                     <include
                             android:id="@+id/note_roll_row3_container"
                             layout="@layout/include_item_note_roll"
-                            android:visibility='@{item.rollList.size() &gt;= 4 ? View.VISIBLE : View.GONE}'
-                            app:item='@{item.rollList.size() &gt;= 4 ? item.rollList.get(3) : null}'/>
+                            android:visibility="@{item.list.size() &gt;= 4 ? View.VISIBLE : View.GONE}"
+                            app:item="@{item.list.size() &gt;= 4 ? item.list.get(3) : null}"/>
 
                     <include
                             layout="@layout/include_item_note_info"
