Add notification note group
Tag: #New #Refactor

--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -20,6 +20,8 @@
     <string name="notification_info_channel">Информация</string>
     <string name="notification_notes_channel">Заметки</string>
 
+    <string name="notification_notes_group_summary">Заметки</string>
+
     <string name="notification_button_unbind">Открепить</string>
 
     <plurals name="notification_info_title">
