--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -34,14 +34,21 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/notification_recycler"
-                    style="@style/RecyclerView"
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                    android:id="@+id/notification_content_container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility='@{!isListEmpty ? View.VISIBLE : View.GONE}'
-                    tools:itemCount="3"
-                    tools:listitem="@layout/item_notification"/>
+                    android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/notification_recycler"
+                        style="@style/RecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility='@{!isListEmpty ? View.VISIBLE : View.GONE}'
+                        tools:itemCount="3"
+                        tools:listitem="@layout/item_notification"/>
+
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         </FrameLayout>
 
