--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -63,4 +63,8 @@
     <!-- Items text -->
     <string name="list_item_rank_count">Заметок:</string>
 
+    <!-- Snackbar text -->
+    <string name="snackbar_message_notification">Уведомление удалено</string>
+    <string name="snackbar_action_notification">Отмена</string>
+
 </resources>
