Add theme for snackbar
Tag: #New

--- a/app/src/main/res/values/styles_app.xml
+++ b/app/src/main/res/values/styles_app.xml
@@ -33,7 +33,12 @@
         <item name="alertDialogTheme">@style/Alert.Light</item>
 
         <item name="bottomSheetDialogTheme">@style/BottomSheetTheme.Light</item>
+
+        <item name="snackbarStyle">@style/MaterialSnackbarTheme</item>
     </style>
+
+    <style name="MaterialSnackbarTheme" parent="Widget.MaterialComponents.Snackbar"/>
+
 
     <style name="App.Light.UI">
         <item name="android:windowBackground">?attr/clBackgroundWindow</item>
