Refactor PreferenceFragment.kt, make SignalInteractor.kt suspendable.
Tag: #Refactor #New

--- a/app/src/main/res/values-ru/strings_dialog.xml
+++ b/app/src/main/res/values-ru/strings_dialog.xml
@@ -32,6 +32,14 @@
         приложению необходимо ваше разрешение. Иначе некоторые мелодии будут не доступны для вас.
     </string>
 
+    <string name="dialog_title_import_permission">Требуется разрешение</string>
+    <string name="dialog_text_import_permission">
+        Для поиска файлов находящихся на SD карте, приложению необходимо ваше разрешение.
+        Иначе некоторые файлы будут не доступны для вас.
+    </string>
+
+    <string name="dialog_title_import">Выберите файл</string>
+
     <string name="dialog_title_repeat">Выбрать повтор</string>
     <string name="dialog_repeat_0">10 минут</string>
     <string name="dialog_repeat_1">30 минут</string>
