--- a/app/src/main/res/values/strings_dialog.xml
+++ b/app/src/main/res/values/strings_dialog.xml
@@ -33,6 +33,14 @@
         Otherwise some ringtones will not be available to you.
     </string>
 
+    <string name="dialog_title_import_permission">Required permission</string>
+    <string name="dialog_text_import_permission">
+        In order to find files located on the SD card, application needs your permission.
+        Otherwise some files will not be available to you.
+    </string>
+
+    <string name="dialog_title_import">Choose file</string>
+
     <string name="dialog_title_repeat">Select repeat</string>
     <string name="dialog_repeat_0">10 minutes</string>
     <string name="dialog_repeat_1">30 minutes</string>
